# bugfixes-rs

./: Cargo.toml  README.md
.github/workflows/: deploy.yml  pulls.yml
examples/: app_init.rs  explicit_logger.rs  local_only.rs
src/: config.rs  lib.rs  logger.rs
