[package]
name = "bugfixes"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Rust logging client for Bugfixes with optional remote reporting"
repository = "https://github.com/bugfixes/bugfixes-rs"
exclude = [".context/*", ".github/*"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
temp-env = "0.3"
